# tracee

./: Vagrantfile  aboba.json  go.mod  go.sum
builder/: Dockerfile.dos  Makefile.dos-container
cmd/tracee-bench/: main.go  prometheus.yml
cmd/tracee-ebpf/: main.go
cmd/tracee/cmd/: root.go
performance/dashboard/: docker-compose.yml  prometheus.yml
pkg/cmd/: tracee.go
pkg/cmd/cobra/: cobra.go  config.go
pkg/cmd/flags/: cache.go  cache_test.go
pkg/cmd/urfave/: urfave.go
pkg/config/: config.go
pkg/ebpf/: events_pipeline.go  signature_engine.go  tracee.go
pkg/ebpf/c/: maps.h  tracee.bpf.c  types.h  vmlinux_missing.h
pkg/ebpf/c/common/: merging.h  task.h
pkg/events/queue/: queue.go  queue_hybrid.go  queue_hybrid_test.go  queue_mem_list.go  queue_mem_list_test.go
pkg/metrics/: stats.go
pkg/server/grpc/: tracee_test.go
tests/perftests/: .env  .gitignore  .local.env  .null-ls_641862_analyze.py  .null-ls_706473_analyze.py  .null-ls_773959_analyze.py  Makefile  analyze.py  analyze_ev.py  analyze_mem.py  copy_comparison.sh  dos_grid.py  dos_test.sh  get_top_io.py  label_experiment.sh  lol.json  policy.yaml  pyproject.toml  run_test_vm.sh  test_grid.py
tests/perftests/aboba/: config.yaml  config.yml.bk
tests/perftests/dos/: CMakeLists.txt  Makefile  docker-compose.yml  dos  dos.c  dos_entrypoint.sh  fork_dos.c  invoke_dos.sh  new_dos.c
tests/perftests/mockserver/: Makefile
tests/perftests/mockserver/routes/: events.go  routes.go
