[tool.poetry]
name = "perftests"
version = "0.1.0"
description = ""
authors = ["lcensies <lcensies@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pyproject-toml = "^0.0.10"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
